Feature/547 game logic 8 (#786)
* #547: Remove user when creating a new game.

* #547: Remove Deck from GameModel as it's not used.

* #547: Use userId instead of gameUserId for turns as this makes it easier to map to.

* #547: Fix incorrect usage of gameUser in Postgres.

* #547: Fix incorrect usage of gameUser in SQL Server.

* #547: Fix incorrect gameUserId in tests.
